<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ca.blogspot.electrail.practice.MyFirstAndroidActivity"
    android:nestedScrollingEnabled="false">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/totalTextView"
        android:textSize="50sp"
        android:text="@string/_0"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/totalTextView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="29dp"
        android:text="@string/what_is"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/percentageText"
        android:hint="@string/enter_percent"
        android:gravity="center"
        android:layout_below="@+id/textView"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="numberDecimal"
        android:ems="10"
        android:id="@+id/numberTxt"
        android:layout_below="@+id/textView3"
        android:layout_toLeftOf="@+id/textView2"
        android:layout_toStartOf="@+id/textView2"
        android:hint="@string/enter_number"
        android:gravity="center" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView2"
        android:layout_toEndOf="@+id/percentageText"
        android:layout_alignTop="@+id/percentageText"
        android:layout_toRightOf="@+id/percentageText"
        android:text="@string/per" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView3"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:text="@string/of"
        android:layout_below="@+id/percentageText"
        android:layout_marginTop="10dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/calcBtn"
        android:layout_marginTop="35dp"
        android:textColor="#ffffff"
        android:text="@string/calculate"
        android:background="@color/colorPrimary"
        android:layout_below="@+id/textView4"
        android:layout_alignLeft="@+id/numberTxt"
        android:layout_alignStart="@+id/numberTxt"
        android:layout_alignRight="@+id/numberTxt"
        android:layout_alignEnd="@+id/numberTxt" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:id="@+id/textView4"
        android:text="@string/with_tax"
        android:layout_below="@+id/numberTxt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp" />

</RelativeLayout>
